--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,8 +16,8 @@
 
             <div class="collapse navbar-collapse" [ngClass]="{ 'in': isIn, 'active':isIn }">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a (click)="toggleState()" routerLink="/home">ABOUT ME</a>
+                    <li class="nav-item active">
+                        <a (click)="toggleState()" routerLink="/home">ABOUT</a>
                     </li>
                     <li class="nav-item ">
                         <a (click)="toggleState()" routerLink="/author">PROJECTS</a>
