--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,12 +14,12 @@
 
             </div>
 
-            <div class="collapse navbar-collapse" [ngClass]="{ 'in': isIn, 'active':isIn }">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item" [ngClass]="{ 'in': isIn, 'active':isIn }">
                         <a (click)="toggleState()" routerLink="/home">ABOUT</a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item " [ngClass]="{ 'in': isIn, 'active':isIn }">
                         <a (click)="toggleState()" routerLink="/author">PROJECTS</a>
                     </li>
                 </ul>
