--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,10 +16,10 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" [ngClass]="{ 'in': isIn, 'active':isIn }">
+                    <li class="nav-item" [ngClass]="{'active':isIn }">
                         <a (click)="toggleState()" routerLink="/home">ABOUT</a>
                     </li>
-                    <li class="nav-item " [ngClass]="{ 'in': isIn, 'active':isIn }">
+                    <li class="nav-item " [ngClass]="{'active':isIn }">
                         <a (click)="toggleState()" routerLink="/author">PROJECTS</a>
                     </li>
                 </ul>
