--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,11 +16,11 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" [ngClass]="{'active':isIn }">
-                        <a (click)="toggleState()" routerLink="/home">ABOUT</a>
+                    <li class="nav-item" [ngClass]="{ 'in': isIn, 'active':isIn=='1' }">
+                        <a (click)="toggleState('1')" routerLink="/home">ABOUT</a>
                     </li>
-                    <li class="nav-item " [ngClass]="{'active':isIn }">
-                        <a (click)="toggleState()" routerLink="/author">PROJECTS</a>
+                    <li class="nav-item " [ngClass]="{ 'in': isIn, 'active':isIn=='2' }">
+                        <a (click)="toggleState('2')" routerLink="/author">PROJECTS</a>
                     </li>
                 </ul>
             </div>
