wording update for boostrap

--- a/src/app/author/project-details/project-details.component.html
+++ b/src/app/author/project-details/project-details.component.html
@@ -8,12 +8,12 @@
       </div>
     </div>
   </div>
-  <accordion-group heading="Project 1 : Responsive Invoicing Application (React, Redux, Nodejs)">
+  <accordion-group heading="Project 1 : Responsive Invoicing Application (React, Redux, Nodejs, Bootstap4)">
     <p>Invoicing application targeting SMEs of Australia and give a value added with their account with Bank. React, Redux and
       Nodejs based Responsive application.</p>
     <ul>
-      <li> Development of a responsive application using React-Redux and leading libraries in ecosystem like- Redux-forms, StyledComponents,
-        Normalizer.js, Prototypes, Create-React-app CLI. </li>
+      <li> Development of a responsive application using React-Redux and leading libraries in ecosystem like- Redux-forms, Normalizer.js,
+        Prototypes, Create-React-app CLI. </li>
       <li> Unit tests using Enzyme and Jest libraries.</li>
       <li> Component based architecture of application to make it as scalable and reusable possible.
         <li>Tapping into newest libraries like ReduxForm and Styled-components in React ecosystem. </li>
@@ -36,7 +36,7 @@
         <li> Routing using react-router.</li>
     </ul>
   </accordion-group>
-  <accordion-group heading="Project 3 : Risk Management Application for a bank (Angular, Rxjs, angular-Cli) ">
+  <accordion-group heading="Project 3 : Risk Management Application for a bank (Angular, Rxjs, angular-Cli, Bootstrap) ">
     <p>Project is to develop a portal for the bank, which takes care of managing risk calculation related to clients as a customer
       or organizations.</p>
     <ul>
@@ -52,7 +52,7 @@
     </ul>
 
   </accordion-group>
-  <accordion-group heading="Project 4 : Enhancing performance of an Angularjs application, adding React table with it.  ">
+  <accordion-group heading="Project 4 : Enhancing performance of an Angularjs and scss application, adding React table with it.  ">
     <p>Project was to enhancing the performance of already build project by third party company. A crew management portal of
       US based leading airlines company. Portal is for crew members of airlines where they could login with their credentials
       and see all the details, assignment and alerts related to them. Also they can see the details of flights and their
@@ -69,13 +69,14 @@
     </ul>
 
   </accordion-group>
-  <accordion-group heading="Project 5 : Smart payment Portal for a World’s Leading Bank. (Angularjs)">
+  <accordion-group heading="Project 5 : Smart payment Portal for a World’s Leading Bank. (Angularjs - Bootstrap)">
     <p>Smart payment portal gives a web based experience that provides buyer with flexible payment options. By giving freedom
       to use same login Id and password once registered with organization, to be used at different type of logins. Also Partial
       payment option for customer was implemented by giving freedom to divide payment among many credit cards or bank accounts
       without affecting supplier standard collection process of payment.</p>
     <ul>
-      <li>Complete frontend for the app which uses angular and it’s MVC structure for logical and UI structuring and coding.</li>
+      <li>Complete frontend for the app which uses angular and it’s MVC structure for logical and Bootstrap for UI structuring
+        and coding.</li>
       <li>Worked in team of two Frontend developers to deliver the product from scratch.</li>
       <li>Register cards and bank accounts of the customer with the bank and facilitate thesecure payment.</li>
       <li>Dashboard with all consolidated payments information with details. </li>
@@ -87,7 +88,7 @@
     </ul>
   </accordion-group>
 
-  <accordion-group heading="Project 6 : “Image Editing app” with use of HTML5 and JavaScript.">
+  <accordion-group heading="Project 6 : “Image Editing app” with use of HTML5, Scss and JavaScript.">
     <p>Idea of the project was to provide user with different options to click or select image from phone gallery and customize
       image on their own and send it as a Greetings to their friends.</p>
     <ul>
