wording and sass bootstrap update image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,13 @@
         <p> Reactjs, Redux, react-redux, redux-saga, react-router, redux-form,redux-middlewares, selectors, recompose, ES6, styled-components,
           grid-styled, jest, enzyme.</p>
         <h4 style="color:#8a6d3b"> Angular: </h4>
-        <p> Angularjs, Angular 4, Typescript, Services, Pipes, Directives, Rxjs, Selenium, mocha, Angular-cli, Routing, lazy-loading.</p>
+        <p> Angularjs, Angular 4, Typescript, Bootstrap 4, Services, Pipes, Directives, Rxjs, Selenium, mocha, Angular-cli, Routing,
+          lazy-loading.
+        </p>
+        <h4 style="color:#8a6d3b"> Bootstrap 4: </h4>
+        <p> Grids, widgets, Pagination, jumbotron, flex-box, Date picker, Modals, Messaging, Buttons, Theaming</p>
+        <h4 style="color:#8a6d3b"> CSS 3 and SCSS: </h4>
+        <p> Reusable css, variables, Mixins, Partials, Normalization, cross browser, Animation, styling, Preprocessing</p>
       </div>
       <div class="col-sm-1">
       </div>
