--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
                 Ravikesh Pratap Singh
             </div>
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" (click)="toggleState()">
+                <button type="button" class="navbar-toggle collapsed" (click)="toggleState(slected)">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -14,12 +14,12 @@
 
             </div>
 
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" [ngClass]="{ 'in': isIn}">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" [ngClass]="{ 'in': isIn, 'active':isIn=='1' }">
+                    <li class="nav-item" [ngClass]="{ 'in': isIn, 'active':slected=='1' }">
                         <a (click)="toggleState('1')" routerLink="/home">ABOUT</a>
                     </li>
-                    <li class="nav-item " [ngClass]="{ 'in': isIn, 'active':isIn=='2' }">
+                    <li class="nav-item " [ngClass]="{ 'in': isIn, 'active':slected=='2' }">
                         <a (click)="toggleState('2')" routerLink="/author">PROJECTS</a>
                     </li>
                 </ul>
