removed message to rotate

--- a/src/app/author/project-details/project-details.component.html
+++ b/src/app/author/project-details/project-details.component.html
@@ -88,12 +88,12 @@
     </ul>
   </accordion-group>
 
-  <accordion-group heading="Project 6 : “Image Editing app” with use of HTML5, Scss and JavaScript.">
+  <accordion-group heading="Project 6 : “Image Editing app” with use of HTML5, Sass, jQuery and JavaScript.">
     <p>Idea of the project was to provide user with different options to click or select image from phone gallery and customize
       image on their own and send it as a Greetings to their friends.</p>
     <ul>
       <li> It is an app for doing basic image editing and forward that image as greeting card.</li>
-      <li> Development involved use of HTML5, CSS3, JavaScript and jQuery libraries.</li>
+      <li> Development involved use of HTML5,Sass, CSS3, JavaScript and jQuery libraries.</li>
       <li> Project also involved use of Rest Web service to send the edited image and to save in database.</li>
       <li> Image editing functionalities like crop, rotate, blur effect, blending effect etc. was implemented with help of third
         party JavaScript library.</li>
